wip: retrieve balances using tokenlist and blockchain

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@spindl-xyz/attribution-lite": "^1.4.0",
     "@tkey-mpc/common-types": "^8.2.2",
     "@truffle/hdwallet-provider": "^2.1.4",
+    "@uniswap/token-lists": "1.0.0-beta.33",
     "@walletconnect/utils": "^2.10.6",
     "@walletconnect/web3wallet": "^1.9.5",
     "@web3-onboard/coinbase": "^2.2.6",
@@ -75,6 +76,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.30.0",
     "ethers": "5.7.2",
+    "ethers-multicall-provider": "3.1.2",
     "exponential-backoff": "^3.1.0",
     "firebase": "^10.3.1",
     "framer-motion": "^10.13.1",
