remove cypress and cleanup actions

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "lint": "tsc && next lint",
     "lint:fix": "next lint --fix",
-    "prettier": "prettier -w \"{src,cypress,mocks,scripts}/**/*.{ts,tsx,css,js}\"",
+    "prettier": "prettier -w \"{src,mocks,scripts}/**/*.{ts,tsx,css,js}\"",
     "fix": "yarn lint:fix && ts-prune && yarn prettier",
     "test": "cross-env TZ=CET DEBUG_PRINT_LIMIT=30000 jest",
     "test:ci": "yarn test --ci --silent --coverage --json --watchAll=false --testLocationInResults --outputFile=report.json",
@@ -22,10 +22,6 @@
     "after-install": "yarn generate-types",
     "postinstall": "yarn after-install",
     "analyze": "cross-env ANALYZE=true yarn build",
-    "cypress:open": "cross-env TZ=UTC cypress open --e2e",
-    "cypress:canary": "cross-env TZ=UTC cypress open --e2e -b chrome:canary",
-    "cypress:run": "cypress run",
-    "cypress:ci": "yarn cypress:run --config baseUrl=http://localhost:8080 --spec cypress/e2e/smoke/*.cy.js",
     "serve": "npx -y serve out -p ${REVERSE_PROXY_UI_PORT:=8080}",
     "static-serve": "yarn build && yarn serve"
   },
@@ -103,7 +99,6 @@
     "@safe-global/safe-core-sdk-types": "^1.9.1",
     "@sentry/types": "^7.74.0",
     "@svgr/webpack": "^6.3.1",
-    "@testing-library/cypress": "^8.0.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
@@ -120,8 +115,6 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@walletconnect/types": "^2.10.1",
     "cross-env": "^7.0.3",
-    "cypress": "^12.15.0",
-    "cypress-file-upload": "^5.0.8",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
